--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(color_pp)
 export(color_psc)
 export(color_solidaritat)
 export(color_vox)
+export(contrasting_palette)
 export(dubois_black)
 export(dubois_blue)
 export(dubois_brown)
@@ -30,4 +31,7 @@ export(dubois_pink)
 export(dubois_red)
 export(dubois_tan)
 export(dubois_yellow)
+export(palette_bloc)
+export(steel_palette)
 export(theme_dubois)
+export(theme_dubois_classic)
